# DOBOT_6Axis_ROS2_V3

./: README.md  README_EN.md
dobot_bringup_v3/: package.xml  setup.cfg  setup.py
dobot_bringup_v3/dobot_bringup_v3/: dobot_api.py  dobot_bringup.py  feedback.py
dobot_bringup_v3/launch/: dobot_bringup_ros2.launch.py
dobot_demo/dobot_demo/: demo.py
dobot_msgs_v3/: CMakeLists.txt  package.xml
dobot_msgs_v3/msg/: ToolVectorActual.msg
dobot_msgs_v3/srv/: Arc.srv  BrakeControl.srv  Circle.srv  DigitalOutputs.srv  EnableRobot.srv  GetAngle.srv  GetCoils.srv  GetErrorID.srv  GetHoldRegs.srv  GetInRegs.srv  GetPose.srv  InverseSolution.srv  JointMovJ.srv  ModbusCreate.srv  MovJ.srv  MovJExt.srv  MovJIO.srv  PayLoad.srv  PositiveSolution.srv  RelJointMovJ.srv  RelMovJTool.srv  RelMovJUser.srv  RelMovL.srv  RelMovLUser.srv  RobotMode.srv  ServoJ.srv  ServoP.srv  SetArmOrientation.srv  SetCoils.srv  SetHoldRegs.srv  SetPayload.srv  Wait.srv
dobot_rviz/urdf/: nova2_robot.urdf  nova5_robot.urdf
servo_action/servo_action/: action_move_client.py  action_move_client_reality.py  action_move_server.py  action_move_server_reality.py
